# maps

./: .conf_TEMPLATE  .env__TEMPLATE  .gitignore  _config_secrets.json.TEMPLATE  pyproject.toml  pytest.ini
project/config/: urls.py
project/config/settings/: base.py  develop.py  local.py  production.py  testing.py
project/maps/: admin.py  apps.py  cron.py  factories.py  forms.py  models.py  signals.py  urls.py  views.py
project/maps/lib_tcx/: endomondo.py  endomondo2db.py  tcx.py
project/maps/migrations/: 0001_initial.py  0002_track_path.py  0002_trip_description.py  0003_add_point_indexes.py  0003_auto_20180904_1952.py  0004_auto_20180905_1730.py  0004_remove_point_track_delete_note_delete_point.py  0005_auto_20180911_1338.py  0005_remove_trip_blog.py  0006_alter_trip_blog_category.py  0006_commentqty.py  0007_auto_20181107_1709.py  0008_alter_statistic_max_speed.py  0009_alter_trip_options_commentqty_post_date.py
project/maps/templatetags/: comment_qty.py  datetime_filter.py  parse_date_filter.py
project/maps/tests/: conftest.py  test_forms.py  test_garmin.py  test_garmin_service.py  test_maps_cashing.py  test_models.py  test_parse_activity_file.py  test_parse_tcx_file.py  test_points_service.py  test_tracks_service.py  test_trip.py  (+3 more)
project/templates/: 403.html  404.html  500.html  base.html  pagination.html
requirements/: base.txt  develop.txt  production.txt
sass/sass/: __utils.scss  _backend.scss  _buttons.scss  _forms.scss  _frontend.scss  _modal.scss  _utils.scss  _variables.scss  main.scss
wheels/: parser-0.0.2-cp311-cp311-manylinux_2_34_aarch64.whl  parser-0.0.2-cp311-cp311-manylinux_2_34_x86_64.whl  parser-0.0.2-cp311-cp311-win_amd64.whl  parser-0.0.2-cp313-cp313-manylinux_2_34_aarch64.whl  parser-0.0.2-cp313-cp313-manylinux_2_34_x86_64.whl  parser-0.0.2-cp313-cp313-win_amd64.whl
(+48 files in other folders)
