[project]
name = "maps"
version = "0.1.0"
description = "traveling app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.1",
    "django-bulk-update-or-create>=0.3.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "garminconnect>=0.2.26",
    "mysqlclient>=2.2.7",
    "numpy>=2.2.6",
    "oauthlib>=3.2.2",
    "python-dateutil>=2.9.0.post0",
    "python-wordpress-xmlrpc>=2.3",
    "requests>=2.32.3",
    "tcxreader>=0.4.11",
    "wordpress-api>=1.2.9",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=4.1",
    "django-override-storage>=0.3.2",
    "django-test-without-migrations>=0.6",
    "django-webtest>=1.9.13",
    "mock>=5.2.0",
    "pyfakefs>=5.8.0",
    "pytest>=8.3.5",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.1.1",
    "pytest-diff>=0.1.14",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.7.0",
    "pytest-forked>=1.6.0",
    "pytest-freezegun>=0.4.2",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-raises>=0.11",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "selenium>=4.32.0",
    "webtest>=3.0.4",
]
